@W-11372614 z-index fix for selection-checkbox class (#2811)
* z-index fix for selection-checkbox class

* created new variable for css

* Added TODO comment about css removal after FF

--- a/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcCanvas/alcCanvas.css
+++ b/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcCanvas/alcCanvas.css
@@ -26,6 +26,8 @@
     --z-index-alc-dynamic-node-trigger-menu-opened: 4;
     --z-index-alc-dynamic-node-menu-opened: 3;
 
+    --z-index-alc-selection-checkbox: 1;
+
     --z-index-alc-menu: 3;
     --z-index-alc-menu-trigger-open: 4;
     --z-index-alc-menu-trigger-container-open: 4;
