--- a/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcNode/alcNode.css
+++ b/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcNode/alcNode.css
@@ -34,6 +34,7 @@
     left: 50%;
     position: absolute;
     transform: translate(-50%, 50%);
+    z-index: var(--z-index-alc-selection-checkbox);
 }
 
 .text-container {
